Add markup for pacman

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
         <link rel="stylesheet" href="./normalize.css" />
         <link rel="stylesheet" href="./style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="pacman">
+            <div class="pacman__eye"></div>
+            <div class="pacman__mouth"></div>
+            <div class="pacman__food"></div>
+        </div>
+    </body>
 </html>
